<resources>
    <string name="app_name">Passe Livre Documentos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="text_hello">Olá!</string>
    <string name="text_auth_login">Para iniciar, conecte-se com uma conta Google e tenha acesso aos recursos desse aplicativo</string>
    <string name="text_auth_terms">*Ao conectar, você declara que aceita os Termos de Uso e Políticas de Privacidade</string>
    <string name="text_home_passe_livre">Para obter o passe livre, é necessário realizar o cadastro de uma série de documentos e esperar a aprovação.</string>
    <string name="text_profile_pic">Tenha certeza de que seu rosto está nítido.</string>
    <string name="text_btn_cadastrar_documentos">Cadastrar documentos</string>
    <string name="text_btn_contato_entidade">Contato com a entidade</string>
    <string name="text_apto">Apto</string>
    <string name="text_clique_para_informacoes">Clique para mais informações</string>
    <string name="text_envie_fotos">Envie seus documentos!</string>
    <string name="wait">Aguarde...</string>
    <string name="text_remove_imagem_alerta">Tem certeza que deseja remover esta imagem?</string>
    <string name="menu_quit">Sair</string>
    <string name="text_bt_next">Prosseguir</string>
    <string name="text_proof_address">Caso seu comprovante não esteja em seu nome ou no nome dos seus pais, é necessário uma declaração autenticada em cartório</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sed turpis id velit finibus sagittis id non lectus. Ut varius imperdiet risus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse nec diam justo. Nunc non fringilla odio, eu ultrices mauris. Aenean at mauris dignissim, luctus diam vitae, ornare lorem. Integer aliquet, nibh non commodo vestibulum, lorem turpis auctor nisi, eu rhoncus erat magna eget turpis. Suspendisse nec ipsum ac odio tristique maximus quis id nulla. In volutpat imperdiet erat, ac commodo nulla pharetra vel. Etiam non ultrices dui, vitae ultricies ex. Vestibulum viverra dui eget elementum varius. Suspendisse lorem orci, ullamcorper id ullamcorper quis, pulvinar sit amet turpis. Sed accumsan ut lacus nec suscipit. Maecenas felis ipsum, pulvinar at mauris eget, iaculis consequat nulla. Maecenas ac scelerisque erat. Integer vitae elementum ipsum. Nunc ac vestibulum ante. Aliquam facilisis urna ut turpis blandit, vel ultricies velit tincidunt.</string>
    <string name="text_bt_finish">Finalizar e enviar documentos!</string>
    <string name="text_confirm_docs_message">Os documentos entrarão para análise após a sua confirmação, você não poderá editá-los até que seu status de análise mude. Por isso, tenha certeza de que suas informações foram digitas corretamente e as imagens em boa resolução.</string>
    <string name="text_income_prouni">Insira uma imagem ou pdf da sua liberação para comprovar renda.</string>
    <string name="text_btn_resend_documentos">Reenviar documentos</string>
    <string name="fcm_message">Mensagem do app Passe Livre Documentos</string>
    <string name="msg_token_fmt" />
    <string name="text_analise">Boa notícia, sua documentação foi cadastrada no sistema da Metroplan. Agora basta aguardar a análise.</string>
    <string name="text_devolvido">Infelizmente sua solicitação foi devolvida devido a alguma pendência, mas não se preocupe. Veja abaixo os motivos e faça uma nova solicitação com os novos documentos e informações!</string>
    <string name="text_inapto">Infelizmente você não possui direito a este benefício! Veja abaixo o motivo:</string>
    <string name="text_apto_dec">Ótimo! Sua documentação foi aprovada pela Metroplan. Agora basta entrar em contato com a empresa responsável pelo transporte do Passe Livre de sua cidade para solicitar seu cartão.</string>
    <string name="text_pendente">Sua documentação está na fila para ser cadastrada nos sistemas da Metroplan.</string>
</resources>
